# vk-messages-loader

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
cli/: CMakeLists.txt  callbacks.h  cli-exceptions-handler.h  cli.h  main.cpp  token.h
cli/src/: callbacks.cpp  cli-exceptions-handler.cpp  cli.cpp  token.cpp
manager/: CMakeLists.txt  cache.h  chats-cache.h  cli-exceptions-handler.h  cli.cpp  exceptions.h  export.h  friends-cache.h  history-export.h  manager.h  settings.h  token.h  users-cache.h
manager/src/: chats-cache.cpp  cli-exceptions-handler.cpp  exceptions.cpp  export.cpp  friends-cache.cpp  history-export.cpp  manager.cpp  settings.cpp  token.cpp  users-cache.cpp
storage/: CMakeLists.txt  exceptions.h  history-db.h  history-storage.h  history.h  message.h  substorage.h
storage/src/: exceptions.cpp  history-db.cpp  history-storage.cpp  history.cpp  message.cpp
storage/test/: CMakeLists.txt  history-db.cpp  history.cpp  messages.cpp  operators.cpp  operators.h
utils/: CMakeLists.txt  exceptions-handling.h  exceptions.h  json-exceptions.h  json-members.h  json.h
utils/src/: exceptions.cpp  json-exceptions.cpp  json.cpp
utils/test/: CMakeLists.txt  json-members.cpp  json.cpp
vk-api/: CMakeLists.txt  api.h  attachment.h  attachments.h  callbacks.h  communication-interface.h  data-types.h  errors.h  exceptions.h  friends.h  intervals-manager.h  messages.h  requests-manager.h  test.cpp  users.h
vk-api/src/: attachment-helper.h  communication-interface.cpp  data-types.cpp  exceptions.cpp  friends.cpp  intervals-manager.cpp  messages.cpp  photo-attachment.cpp  requests-manager.cpp  sticker-attachment.cpp  users.cpp  video-attachment.cpp
vk-api/test/: CMakeLists.txt  intervals-manager.cpp
ycm/: ycmflags.py
